--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -24,7 +24,9 @@ android {
 
 dependencies {
 	compile 'com.android.support:appcompat-v7:18.0.0'
+    compile 'com.android.support:appcompat-v7:sources'
 	compile 'com.android.support:gridlayout-v7:18.0.0'
 	compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:support-v4:sources'
     compile files('libs/gson-2.2.4.jar')
 }
