--- a/BaseAndroid/src/main/AndroidManifest.xml
+++ b/BaseAndroid/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 	    <activity
 		    android:name=".view.SplashActivity"
-		    android:label="@string/app_name" >
+		    android:label="@string/title_section1" >
 		    <intent-filter>
 			    <action android:name="android.intent.action.MAIN" />
 
