--- a/BaseAndroid/src/main/AndroidManifest.xml
+++ b/BaseAndroid/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
+
+	<uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
