--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "18.1.0"
+    buildToolsVersion "19.0.1"
 
     defaultConfig {
         minSdkVersion 8
@@ -23,10 +23,10 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:appcompat-v7:18.0.0'
+	compile 'com.android.support:appcompat-v7:19.0.0'
     compile 'com.android.support:appcompat-v7:sources'
-	compile 'com.android.support:gridlayout-v7:18.0.0'
-	compile 'com.android.support:support-v4:18.0.0'
+	compile 'com.android.support:gridlayout-v7:19.0.0'
+	compile 'com.android.support:support-v4:19.0.0'
     compile 'com.android.support:support-v4:sources'
-    compile files('libs/gson-2.2.4.jar')
+    compile 'com.google.code.gson:gson:2.+'
 }
