--- a/BaseAndroid/src/main/AndroidManifest.xml
+++ b/BaseAndroid/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 	    <activity
 		    android:name=".view.SplashActivity"
 		    android:label="@string/title_section1" >
-		    <intent-filter>
+		    <intent-filter android:label="@string/app_name">
 			    <action android:name="android.intent.action.MAIN" />
 
 			    <category android:name="android.intent.category.LAUNCHER" />
