--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -1,9 +1,8 @@
-//apply plugin: 'android'
 apply plugin: 'android-library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion "19.0.3"
 
 
     defaultConfig {
@@ -11,6 +10,13 @@ android {
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
+    }
+
+    buildTypes {
+        debug {
+        }
+        release {
+        }
     }
 }
 
