--- a/BaseAndroidTest/build.gradle
+++ b/BaseAndroidTest/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion "19.0.3"
 
     defaultConfig {
         minSdkVersion 8
@@ -11,7 +11,7 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        release {aven
+        release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
