--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android-library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.3"
+    buildToolsVersion "19.1.0"
 
 
     defaultConfig {
@@ -23,8 +23,8 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:support-v4:+'
-    compile 'com.android.support:appcompat-v7:sources'
+//    compile 'com.android.support:appcompat-v7:sources'
 	compile 'com.android.support:gridlayout-v7:+'
-    compile 'com.android.support:support-v4:sources'
+//    compile 'com.android.support:support-v4:sources'
     compile 'com.google.code.gson:gson:2.+'
 }
