--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "20"
 
 
     defaultConfig {
@@ -21,10 +21,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:support-v4:19+'
 //    compile 'com.android.support:appcompat-v7:sources'
-	compile 'com.android.support:gridlayout-v7:+'
+	compile 'com.android.support:gridlayout-v7:19+'
 //    compile 'com.android.support:support-v4:sources'
     compile 'com.google.code.gson:gson:2.+'
 }
