--- a/BaseAndroidTest/build.gradle
+++ b/BaseAndroidTest/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "20"
 
     defaultConfig {
         minSdkVersion 8
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:support-v4:19.+'
     compile 'com.google.code.gson:gson:2.+'
     //compile 'com.cmovil.baseandroid:BaseAndroid:1.5.0'
     //compile files ('libs/BaseAndroid.aar')
