--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -21,10 +21,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.android.support:support-v4:19+'
+    compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:support-v4:20+'
+    compile 'com.android.support:support-annotations:20+'
 //    compile 'com.android.support:appcompat-v7:sources'
-	compile 'com.android.support:gridlayout-v7:19+'
+	compile 'com.android.support:gridlayout-v7:20+'
 //    compile 'com.android.support:support-v4:sources'
     compile 'com.google.code.gson:gson:2.+'
 }
