--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -1,15 +1,33 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.2"
 
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
-        versionName "1.0"
+        versionName "1.5.2"
+        project.archivesBaseName = "BaseAndroid"
+        project.version = android.defaultConfig.versionName
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    libraryVariants.all { variant ->
+        variant.outputs.each { output ->
+            def outputFile = output.outputFile
+            def name = variant.buildType.name
+            if (outputFile != null && outputFile.name.endsWith('.aar')) {
+                def fileName = "${archivesBaseName}-${version}-"+name+".aar"
+                output.outputFile = new File(outputFile.parent, fileName)
+            }
+        }
     }
 
     buildTypes {
@@ -22,11 +40,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:20.+'
-    compile 'com.android.support:support-v4:20.+'
-    compile 'com.android.support:support-annotations:20.+'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-annotations:20.0.0'
 //    compile 'com.android.support:appcompat-v7:sources'
-	compile 'com.android.support:gridlayout-v7:20.+'
+	//compile 'com.android.support:gridlayout-v7:21.0.0'
 //    compile 'com.android.support:support-v4:sources'
-    compile 'com.google.code.gson:gson:2.+'
+    compile 'com.google.code.gson:gson:2.3'
 }
