--- a/BaseAndroidTest/build.gradle
+++ b/BaseAndroidTest/build.gradle
@@ -1,15 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             runProguard false
@@ -19,9 +25,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:20.+'
-    compile 'com.android.support:support-v4:20.+'
-    compile 'com.google.code.gson:gson:2.+'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.google.code.gson:gson:2.3'
     //compile 'com.cmovil.baseandroid:BaseAndroid:1.5.0'
     //compile files ('libs/BaseAndroid.aar')
     compile project (':BaseAndroid')
