--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -22,11 +22,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.+'
-    compile 'com.android.support:support-v4:21.+'
-    compile 'com.android.support:support-annotations:20.+'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-annotations:20.0.0'
 //    compile 'com.android.support:appcompat-v7:sources'
-    compile 'com.android.support:gridlayout-v7:21.+'
+    compile 'com.android.support:gridlayout-v7:21.0.0'
 //    compile 'com.android.support:support-v4:sources'
-    compile 'com.google.code.gson:gson:2.+'
+    compile 'com.google.code.gson:gson:2.3'
 }
