--- a/BaseAndroidTest/build.gradle
+++ b/BaseAndroidTest/build.gradle
@@ -19,9 +19,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.+'
-    compile 'com.android.support:support-v4:21.+'
-    compile 'com.google.code.gson:gson:2.+'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.google.code.gson:gson:2.3'
     //compile 'com.cmovil.baseandroid:BaseAndroid:1.5.0'
     //compile files ('libs/BaseAndroid.aar')
     compile project(':BaseAndroid')
