--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -2,15 +2,15 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion "21.1.0"
 
 
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 21
         versionCode 1
-        versionName "1.5.3"
-        project.archivesBaseName = "BaseAndroid"
+        versionName "1.6.1"
+        project.archivesBaseName = "BaseAndroid-dev"
         project.version = android.defaultConfig.versionName
     }
 
