--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
-#Tue Nov 04 16:06:17 CST 2014
-=======
-#Wed Oct 29 12:50:57 CST 2014
->>>>>>> develop
+#Mon Dec 01 10:19:01 CST 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=develop
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.2.1-all.zip
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
