--- a/BaseAndroid/build.gradle
+++ b/BaseAndroid/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 21
         versionCode 2
         versionName "1.6.3"
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.android.support:support-annotations:20.0.0'
     compile 'com.android.support:gridlayout-v7:21.0.0'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.android.gms:play-services:6.1.71'
 }
