--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Mon Dec 01 10:19:01 CST 2014
+#Tue Aug 09 11:14:08 CDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 >>>>>>>=develop
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.2.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
